--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Image Slider using HTML CSS and JavaScript</title>
+  <title>buatBubub</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -21,39 +21,39 @@
 
             <div class="item" style="background-image: url(./assets/16.jpg);">
                 <div class="content">
-                    <div class="name">i love u sooooooo much cantik. i always love u, i always do, in every universe. one more time, happy 1 year anniversary sayangkuu</div>
+                    <div class="name"><mark>i love u sooooooo much cantik. i always love u, i always do, in every universe. one more time, happy 1 year anniversary sayangkuu</mark></div>
                 </div>
             </div>
             <div class="item" style="background-image: url(./assets/1.jpg);">
                 <div class="content">
-                    <div class="name">Happy 1 Year Anniversary Cantik</div>
-                    <div class="des">Dalam rangka anniversary 1 tahun kita, i wanna take u on a date through time. Let's enjoy our past time together cantik!</div>
+                    <div class="name"> <mark>Happy 1 Year Anniversary Cantik</mark></div>
+                    <div class="des"><mark>rangka anniversary 1 tahun kita, i wanna take u on a date through time. Let's enjoy our past time together cantik!</mark></div>
                 </div>
             </div>
             <div class="item" style="background-image: url(./assets/2.jpg);">
                 <div class="content">
-                    <div class="name">Mirror Selfie</div>
-                    <div class="des">Ayang suka bangettt tauu mirror selfie sama akuuu</div>
+                    <div class="name"><mark>Mirror Selfie</mark></div>
+                    <div class="des"><mark>Ayang suka bangettt tauu mirror selfie sama akuuu</mark></div>
                 </div>
             </div>
             <div class="item" style="background-image: url(./assets/3.jpg);">
                 <div class="content">
-                    <div class="name">Another Mirror Selfie</div>
+                    <div class="name"><mark>Another Mirror Selfie</mark></div>
                 </div>
             </div>
             <div class="item" style="background-image: url(./assets/4.jpg);">
                 <div class="content">
-                    <div class="name">Kalau inii namanya eskalator selfie sama ayangg</div>
+                    <div class="name"><mark>Kalau inii namanya eskalator selfie sama ayangg</mark></div>
                 </div>
             </div>
             <div class="item" style="background-image: url(./assets/5.jpg);">
                 <div class="content">
-                    <div class="name">the first thing that makes me fall so hard; your lovely hands</div>
+                    <div class="name"><mark>the first thing that makes me fall so hard; your lovely hands</mark></div>
                 </div>
             </div>
             <div class="item" style="background-image: url(./assets/6.jpg);">
                 <div class="content">
-                    <div class="name">i guess this is the most beautiful picture of u i've taken this far</div>
+                    <div class="name">i guess this is the most beautiful picture of u i've taken this far.</div>
                 </div>
             </div>
             <div class="item" style="background-image: url(./assets/7.jpg);">
@@ -63,12 +63,12 @@
             </div>
             <div class="item" style="background-image: url(./assets/8.jpg);">
                 <div class="content">
-                    <div class="name">another mirror selfie part 99999</div>
+                    <div class="name"><mark>another mirror selfie part 99999</mark></div>
                 </div>
             </div>
             <div class="item" style="background-image: url(./assets/9.jpg);">
                 <div class="content">
-                    <div class="name">nantii harus foto ginii lagi yaa cantikk</div>
+                    <div class="name"><mark>nantii harus foto ginii lagi yaa cantikk</mark></div>
                 </div>
             </div>
             <div class="item" style="background-image: url(./assets/10.jpg);">
@@ -78,17 +78,17 @@
             </div>
             <div class="item" style="background-image: url(./assets/11.jpg);">
                 <div class="content">
-                    <div class="name">sejak ayang di jakarta, tempat ini jadi nggak se spesial biasanya</div>
+                    <div class="name"><mark>sejak ayang di jakarta, tempat ini jadi nggak se spesial biasanya</mark></div>
                 </div>
             </div>
             <div class="item" style="background-image: url(./assets/12.jpg);">
                 <div class="content">
-                    <div class="name">kita harus foto di sinii lagi bubb, tapi berdua hihi</div>
+                    <div class="name"><mark>kita harus foto di sinii lagi bubb, tapi berdua hihi</mark></div>
                 </div>
             </div>
             <div class="item" style="background-image: url(./assets/13.jpg);">
                 <div class="content">
-                    <div class="name">another mirror selfie part jebrot with ayangg</div>
+                    <div class="name"><mark>another mirror selfie part jebrot with ayangg</mark></div>
                 </div>
             </div>
             <div class="item" style="background-image: url(./assets/14.jpg);">
